--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,12 @@
     "name": "cargomedia/cm-tools",
     "license": "MIT",
     "require": {
-		"cargomedia/cm": "~1.3.9"
+		"cargomedia/cm": "~1.3.10"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7.10"
     },
+	"minimum-stability": "alpha",
     "autoload": {
         "psr-0": {
             "CMTools_": "library/"
