--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "cargomedia/cm-tools",
     "license": "MIT",
     "require": {
-		"cargomedia/cm": "~1.3.10"
+		"cargomedia/cm": "~1.3.10",
+		"tomaszdurka/codegenerator": "~0.1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7.10"
