--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "tomaszdurka/codegenerator": "~0.1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7.10"
+        "phpunit/phpunit": "~3.7.10",
+        "behat/behat": "2.4.*@stable",
+        "mikey179/vfsStream": "~1.2.0"
     },
     "minimum-stability": "alpha",
     "autoload": {
@@ -20,5 +22,8 @@
                 "path": ""
             }
         }
+    },
+    "config": {
+        "bin-dir": "scripts/"
     }
 }
